OTP Activity few bug solved

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#40C221</color>
     <color name="deepTeal">#117A41</color>
     <color name="blue">#1947B9</color>
+    <color name="grey">#969699</color>
 </resources>
