--- a/app/src/main/res/layout/activity_otpverification.xml
+++ b/app/src/main/res/layout/activity_otpverification.xml
@@ -62,9 +62,10 @@
         android:cursorVisible="true"
         android:enabled="true"
         android:inputType="number"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:textSize="22sp"
         android:textStyle="bold"
+        app:cursorColor="?android:textColorPrimary"
         app:itemCount="6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,16 +73,52 @@
         app:viewType="line"
         tools:ignore="SpeakableTextPresentCheck" />
 
+    <TextView
+        android:id="@+id/resend_otp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Resend OTP"
+        android:textColor="@color/grey"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/pinView"
+        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintStart_toStartOf="@id/pinView"
+        app:layout_constraintTop_toBottomOf="@id/pinView" />
+
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="in 30s"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/resend_otp"
+        app:layout_constraintStart_toEndOf="@+id/resend_otp"
+        app:layout_constraintTop_toTopOf="@+id/resend_otp" />
+
     <Button
         android:id="@+id/btn_verify"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="45dp"
         android:text="Verify"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/pinView"
         app:layout_constraintStart_toStartOf="@+id/pinView"
         app:layout_constraintTop_toBottomOf="@+id/pinView" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="22dp"
+        android:visibility="gone"
+        android:layout_marginBottom="329dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/timer"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
